feat: Implement error handling and logging for configuration symlinker
- Added `error-handler.ts` to manage custom error types and logging.
- Introduced `Logger` class for structured logging with different levels.
- Created `ErrorRecovery` class for handling recoverable errors.
- Implemented `ErrorHandler` for centralized error management.

feat: Add path validation functionality

- Created `path-validator.ts` to validate source and target paths.
- Implemented checks for dangerous paths, path length, and characters.
- Added methods to prevent directory traversal and sanitize paths.

feat: Develop symbolic link management

- Introduced `symbolic-link-manager.ts` for processing configuration entries.
- Implemented methods to create folder and file symlinks with validation.
- Added support for dry runs and user prompts for overwriting existing links.

feat: Create user prompt interface

- Added `user-prompt.ts` to handle user confirmations and selections.
- Implemented batch confirmation state for consistent user interactions.

feat: Define project types

- Created `types.ts` to define interfaces for configuration entries and validation results.

chore: Set up TypeScript and Vite configuration

- Added `tsconfig.json` for TypeScript compiler options.
- Created `vite.config.ts` for building the project with Vite.
- Added `vitest.config.ts` for testing configuration with Vitest.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ src/.claude/settings.local.json
 .vscode/mcp.json
 .my-notes/
 
+
+src/project-config-symlinker/dist
+src/project-config-symlinker/setup-config.json
+src/project-config-symlinker/sample
+src/project-config-symlinker/.claude/settings.local.json
