--- a/src/project-config-symlinker/.vscode/tasks.json
+++ b/src/project-config-symlinker/.vscode/tasks.json
@@ -1,15 +1,23 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "build",
-      "type": "npm",
-      "script": "build",
-      "group": "build",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "problemMatcher": ["$tsc"]
-    }
-  ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "build",
+			"type": "npm",
+			"script": "build",
+			"group": "build",
+			"presentation": {
+				"reveal": "silent"
+			},
+			"problemMatcher": [
+				"$tsc"
+			]
+		},
+		{
+			"label": "Run path-validator.test.ts with Vitest",
+			"type": "shell",
+			"command": "npx vitest tests/path-validator.test.ts",
+			"group": "test"
+		}
+	]
 }
