--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,7 @@ on:
     branches:
       - main
       - develop
-    paths:
-      - 'src/project-config-symlinker/**'
-      - '.github/workflows/**'
+
 
 permissions:
   contents: write
@@ -27,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [20.x]
 
     steps:
       - name: Checkout code
