--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,9 @@ on:
     branches: [ main, develop ]
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
+  packages: write
 
 defaults:
   run:
@@ -204,6 +205,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
